# particleML

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.claude/memory/: feedback_commit_no_coauthor.md
.claude/plugins/: installed_plugins.json
.github/workflows/: ci.yml  docs.yml
cmssw/ParticleMLExtractor/: BuildFile.xml
configs/e0/: e0-audit-policy.json  extraction-policy.json  host-qualification.json
configs/e0.5/: adapter-policy.json  checkpoint-policy.json  dependency-policy.json  e05-audit-policy.json  fallback-policy.json
configs/e1/: budget-policy.json  matrix-policy.json
configs/e2/: bootstrap-policy.json  matrix-policy.json
configs/e3/: baseline-policy.json  matrix-policy.json
configs/reports/: evidence-policy.json
containers/jetson/: Dockerfile
containers/runpod/: Dockerfile  environment-record.template.json
docs/: index.md  researcher-profile.md
docs/.vitepress/: config.mjs
docs/engineering/: cloud-training.md  cms-2015-miniaodsim-guide.md  development-and-debugging.md  jetson-orin-nano-debugging.md  local-pc-debugging.md  particleml-architecture.md
docs/learning/: hsf-model-training-tutorial.html  hsf-model-training-tutorial.md  (+2 more)
schemas/: e0-audit.schema.json  e05-audit.schema.json  prediction.schema.json  run-record.schema.json  split-manifest.schema.json
scripts/: jetson_cms2015_omnilearned_smoke.py  validate_software_docs.py
tests/: __init__.py  docs-config.test.mjs  test_artifacts.py  test_audit.py  test_baseline.py  test_bootstrap.py  test_checkpoint.py  test_cli.py  test_cmssw_contract.py  test_contracts.py  test_dataset.py  test_e0.py  test_experiment.py  test_literature_dossier.py  test_manifest.py  test_metrics.py  test_model_integration.py  test_pretrained_omnilearn_pet_practice.py  test_reporting.py  test_runpod_environment.py  test_software_document_contract.py  test_views.py
(+135 files in other folders)
