[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "particleml-research"
version = "0.1.0"
description = "Reproducible software for the particleML jet-physics research program."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "particleML contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "awkward>=2.7,<3",
  "h5py>=3.11,<4",
  "jsonschema>=4.23,<5",
  "numpy>=1.26,<2",
  "uproot>=5.4,<6",
]

[project.optional-dependencies]
ci = [
  "awkward>=2.7,<3",
  "build>=1.2,<2",
  "hatchling>=1.27,<2",
  "h5py>=3.11,<4",
  "jsonschema>=4.23,<5",
  "mypy>=1.14,<2",
  "numpy>=1.26,<2",
  "packaging>=26,<27",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-jsonschema>=4.23,<5",
  "uproot>=5.4,<6",
]
runpod = [
  "awkward>=2.7,<3",
  "h5py>=3.11,<4",
  "jsonschema>=4.23,<5",
  "numpy>=1.26,<2",
  "pyyaml>=6.0,<7",
  "uproot>=5.4,<6",
]

[project.scripts]
particleml = "particleml.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/particleml"]

[tool.pytest.ini_options]
addopts = "-ra --ignore=tests/test_literature_dossier.py"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
include = ["src/particleml/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
extend-exclude = [
  "tests/test_literature_dossier.py",
  "tests/test_pretrained_omnilearn_pet_practice.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/particleml"]
